# displayxr-browser

./: .gitattributes  .gitignore  README.md
branding/: BRANDING  README.md
docs/: README.md  auto-update-design.md  handoff-pipeline-bringup.md  integration-points.md  macos-port-design.md  maintenance-policy.md  rebase-runbook.md  release-and-distribution.md  remote-build.md  security-rebase-automation.md
installer/: DisplayXRBrowserInstaller.nsi  README.md  build_installer.sh
patches/: 0001-displayxr-inline-3d-625-B2a-browser-process-weave-cl.patch  0002-displayxr-inline-3d-625-B2a-add-present-owner-sessio.patch  0003-displayxr-inline-3d-625-B2b-GPU-browser-weave-Mojo-b.patch  0004-displayxr-inline-3d-625-B2c.1-GPU-thread-synthetic-w.patch  0005-B2c.2-weave-the-REAL-canvas-texture-replace-syntheti.patch  0006-B3-WebXR-inline-3D-JS-surface-head-tracked-2-view-of.patch  0007-displayxr-inline-3d-625-B4a-chrome-port-shared-compo.patch  0008-B4b-per-element-inline-3D-weave-via-CEF-sub-rect-mod.patch  0009-B4b-cleanup-strip-bring-up-diagnostics-drop-the-dead.patch  0010-inline-3d-625-auto-force-high-perf-GPU-adapter-retir.patch  0011-inline-3d-625-plumb-inline_3d_rects-through-LayerCon.patch  0012-inline-3d-625-Graphite-compatible-weave-readback-ret.patch  0013-DisplayXR-inline-3D-625-B4c-weave-under-DirectCompos.patch  (+43 more)
scripts/: README.md  args.official.gn  brand.sh  build.sh  config.env  fetch.sh  package.sh  release.sh  remote-build.sh  sign.sh  update-feed.sh  weave-gate.sh
scripts/aws/: do_rebase.ps1  remote-build.ps1  remote-rebase.ps1  setup-oidc.sh  ssm-run.sh
(+3 files in other folders)
